--- a/expense-tracker/style.css
+++ b/expense-tracker/style.css
@@ -147,6 +147,38 @@ input[type='number'], input[type='text'] {
   cursor: pointer;
 }
 
-.list li:hover .delete-btn {
+.editBtn {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translate(-100%, -50%);
+  background-color: #e74c3c;
+  border: 0;
+  color: #fff;
+  font-size: 20px;
+  line-height: 20px;
+  padding: 2px 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.list li:hover .delete-btn  {
   opacity: 1;
+}
+
+.list li:hover .editBtn {
+  opacity: 1;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.editMode {
+  display: block;
 }
